# handy-haskell

./: README.md
build-haskell-platform/: 7.10.3-standalone.sh  7.10.3.sh  7.8.4-fedora.sh
handy/: Handy-Function.html  Handy-List.html  Handy-Number.html  Handy.html  doc-index.html  handy.cabal  handy.haddock  index-frames.html  index.html  mini_Handy-Function.html  mini_Handy-List.html  mini_Handy-Number.html  mini_Handy.html
handy/src/: Handy-Function.html  Handy-List.html  Handy-Number.html  Handy.hs  Handy.html
handy/test/: HandyTest.hs
handy/tools/: gen-doc-and-update-gh-page.sh
haskell-platform-7.8.4-fedora/: script
hlint/: HLint.hs  ghci.conf
irc/: BaseParser.hs  FormatTime.hs  IRCParser.hs  IRCTypes.hs  LICENSE  irc-logbot.cabal  logbot.hs
irc/ng/: Attempt2.hs  Attempt3.hs  reconnect.hs
numbers/: ModularInverse.hs  numbers.hs
other/: Handy.hs  Para.hs  Scavenger.hs  who-me.hs
other/2017-newton/: newton.hs
other/js-2014-07/: Inputs.hs  Main.hs  Main2.hs  gen-dot.hs  pokus-x-2.dot  pokus-x.dot  prep.py  solutions.txt  tralala.dot
other/js-2014-08/: Main.hs
other/js-2014-10/: main.hs
other/js-2015-05/: Main.hs
other/js-2015-06/: Main.hs
other/js-2016-05/: main.hs
other/js-2016-06/: main.hs
other/js-2016-07/: js-2016-07.hs
random/: mod.hs
svg-graphic-teach/: LICENSE  README.md  svg-graphic-teach.cabal
svg-graphic-teach/data/: example.xhtml
svg-graphic-teach/examples/: basic-triangles.hs  frac-tree.hs  pavuciny.hs  sierp.hs
svg-graphic-teach/src/: SimpleGraphics.hs
svg-graphic-teach/src/SimpleGraphics/: Svg.hs  Types.hs
(+59 files in other folders)
